<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asia.netinfta.ykolog.EditConfig">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callsign"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Your Callsign"
                android:id="@+id/editCallsign" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qra"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Your Name"
                android:id="@+id/editQRA" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeZone"
                android:id="@+id/textTimeZone" />

            <RadioGroup
                android:id="@+id/radioTimeZone">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioTimeZoneUTC"
                    android:text="@string/UTC"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioTimeZoneLocal"
                    android:text="@string/LocalTime"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rigs"
                android:id="@+id/textView" />

            <GridLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%d rigs configured"
                    android:id="@+id/textView2" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit"
                    android:id="@+id/buttonEditRigs" />
            </GridLayout>

        </TableRow>
        <TableRow>
            <TextView android:text=""/>
            <CheckBox android:text="Use GPS for my QTH and GL"
                android:id="@+id/checkBoxConfigGPS"/>
        </TableRow>
        <TableRow>
            <TextView android:text=""/>
            <GridLayout>
                <Button
                    android:id="@+id/button_save"
                    android:text="@string/Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/button_cancel"
                    android:text="@string/Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </GridLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>
